<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/dimen_20"
    tools:context=".ConnectionActivity">
    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_title"
        android:textSize="@dimen/text_20"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        />
    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dimen_40"
        android:text="@string/title_here"
        android:textSize="@dimen/text_20"
        android:textStyle="normal"
        android:textColor="@android:color/black"
        />
    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_time"
        android:textSize="@dimen/text_20"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        />
    <TextView
        android:id="@+id/textTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dimen_40"
        android:text="@string/time_here"
        android:textSize="@dimen/text_20"
        android:textStyle="normal"
        android:textColor="@android:color/black"
        />
    <TextView
        android:id="@+id/text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_alert"
        android:textSize="@dimen/text_20"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        />
    <TextView
        android:id="@+id/textAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dimen_40"
        android:text="@string/title_here"
        android:textSize="@dimen/text_20"
        android:textStyle="normal"
        android:textColor="@android:color/black"
        />
</LinearLayout>